# media-lib

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  tag.yaml
c/: .gitignore  Makefile  common.h  decode-videotoolbox  decode-videotoolbox.c  decode-videotoolbox.h  h264.c  h264.h  log.c  log.h  main.c  mp4.c  mp4.h
crates/media-bin/: Cargo.toml
crates/media-bin/src/: main.rs
crates/media-client/: Cargo.toml
crates/media-client/src/: lib.rs  test.rs
crates/media-lib/: Cargo.toml
crates/media-lib/src/: hardware_accelerated_video_decoder.rs  lib.rs
crates/media-lib/src/media/: hardware_accelerated_video_decoder.rs  mod.rs
crates/media-lib/src/video/: decoder.rs  filter.rs  hardware.rs  mod.rs  private_options.rs  tests.rs  types.rs
crates/media-types/: Cargo.toml
crates/media-types/src/: lib.rs
